change cname- issue with projects

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -2,14 +2,15 @@
 layout: page
 title: projects
 subtitle: things ive made.
-description: Pudhina Fresh projects page – A minimal yet feature-rich Jekyll theme made for personal websites and blogs.
+description: list of projects!
 permalink: /projects/
 sitemap:
   priority: 0.9
 tags:
-  - name: pudhina fresh theme
-  - name: jekyll theme
-  - name: jekyll
+  - name: dev
+  - name: photo
+  - name: work
+  - name: home
 ---
 
 <div class="card-columns">
